<resources>
    <string name="app_name">BookMessagerHaihqph05936</string>
    <string name="name_QLS">BookMessager</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sigin">Sigin</string>
    <string name="remember_password">Remember Password ?</string>
    <string name="repasswoed">RePasswoed</string>
    <string name="number_phone">Number Phone</string>
    <string name="full_name">Full Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="list_add">List ADD</string>
    <string name="title_activity_danh_sach_nguoi_dung">DanhSachNguoiDungActivity</string>
    <string name="m_th_lo_i">Mã thể Loại</string>
    <string name="mo_ta">Mo ta</string>
    <string name="ma_sach">Ma Sach</string>
    <string name="ten_sach">Ten Sach</string>
    <string name="ten_tac_gia">Ten Tac Gia</string>
</resources>
