<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DoiMatKhauActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <EditText
            android:id="@+id/edtPassworMk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtRePasswordMk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/repasswoed"
            android:textSize="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btndoiMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="doimatkhau"
                android:text="Doi Mat Khau" />

            <Button
                android:id="@+id/btnCanceMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cancleMatkhau"
                android:text="@string/cancel" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>